--- a/spring-security/spring-security-001-login/src/main/resources/templates/login.html
+++ b/spring-security/spring-security-001-login/src/main/resources/templates/login.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
 </head>
 <body>
 
