--- a/spring-security/spring-security-001-login/src/main/resources/templates/login.html
+++ b/spring-security/spring-security-001-login/src/main/resources/templates/login.html
@@ -49,6 +49,17 @@
 				<div class="col-md-4 ">
 					<form class="p-4" th:action="@{/login}" th:method="post">
 						<h5 class="pb-2">LOGIN</h5>
+						<div
+							th:if="${param.error} and ${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">
+							<div class="alert alert-danger">
+								<small
+									th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"></small>
+								<button type="button" class="close" data-dismiss="alert"
+									arial-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+						</div>
 						<div class="row">
 							<div class="col-md-12">
 								<div class="form-group">
