--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/login.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/login.html
@@ -24,18 +24,30 @@
 <body>
 	<header>
 		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-info">
-			<a class="navbar-brand" href="#">Spring Security</a>
+			<a class="navbar-brand" href="S001-home.html">Spring Security</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#navbarsExampleDefault"
 				aria-controls="navbarsExampleDefault" aria-expanded="false"
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
+
 			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item"><a class="nav-link" href="#"><i
-							class="fa fa-home mr-1"></i>Home </a></li>
+					<li class="nav-item"><a class="nav-link"
+						href="../S001-home.html"><i class="fa fa-home mr-1"></i>Home </a></li>
 				</ul>
+
+				<div class="my-2 my-lg-0">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active"><a class="nav-link"
+							th:href="@{/do-registration}"><i
+								class="fa fa-registered mr-1"></i>Register </a></li>
+						<li class="nav-item"><a class="nav-link" th:href="@{/login}"><i
+								class="fa fa-sign-in-alt mr-1"></i>Login </a></li>
+					</ul>
+				</div>
+
 			</div>
 		</nav>
 	</header>
