--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS001-reg-confirmation.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS001-reg-confirmation.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
 <!-- Required meta tags -->
 <meta charset="utf-8">
