--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS001-registration.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS001-registration.html
@@ -63,6 +63,28 @@
 					<form class="p-4" th:action="@{/do-registration}" th:method="post"
 						th:object="${dto}">
 						<h5 class="pb-2">REGISTER</h5>
+						
+						<div th:if="${messages}">
+							<div
+								class="alert alert-success alert-dismissible fade show rounded-0">
+								<small th:text="#{${messages}}"></small>
+								<button type="button" class="close" data-dismiss="alert"
+									aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+						</div>
+						<div th:if="${errors}">
+							<div
+								class="alert alert-danger alert-dismissible fade show rounded-0">
+								<small th:text="#{${errors}}"></small>
+								<button type="button" class="close" data-dismiss="alert"
+									aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+						</div>
+						
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
