commit : adding the mail sending.

--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/login.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/login.html
@@ -40,11 +40,12 @@
 
 				<div class="my-2 my-lg-0">
 					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active"><a class="nav-link"
+						<li class="nav-item"><a class="nav-link"
 							th:href="@{/do-registration}"><i
 								class="fa fa-registered mr-1"></i>Register </a></li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/login}"><i
-								class="fa fa-sign-in-alt mr-1"></i>Login </a></li>
+						<li class="nav-item active"><a class="nav-link"
+							th:href="@{/login}"><i class="fa fa-sign-in-alt mr-1"></i>Login
+						</a></li>
 					</ul>
 				</div>
 
