--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/email-template.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/email-template.html
@@ -1,43 +1,75 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html lang="en"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Sending Email with Thymeleaf HTML Template Example</title>
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<!-- Bootstrap CSS -->
+<link rel="icon"
+	href="https://getbootstrap.com/docs/4.3/assets/img/favicons/favicon-32x32.png"
+	sizes="32x32" type="image/png">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	crossorigin="anonymous">
+<!-- Font Awesome -->
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.css" />
 
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'/>
-
-    <!-- use the font -->
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            font-size: 48px;
-        }
-    </style>
 </head>
-<body style="margin: 0; padding: 0;">
+<body>
+	<div class="row justify-content-center">
+		<div class="col-md-10 col-sm-10">
+			<div class="card mt-2" style="height: 20rem;">
+				<h5 class="card-header">Registration Confirmation</h5>
+				<div class="card-body ">
+					<div class="row ">
+						<div class="col-md col-sm">
+							<h6 class="card-title " th:text="${'Dear ' + name}"></h6>
+							<p>Thank you for you registration.</p>
+						</div>
+					</div>
+					<div class="row ">
+						<div class="col-md col-sm">
+							<p>Please click the following button to activate you account.
+								Account activation is within 24 hours after registration.</p>
+						</div>
+					</div>
+					<div class="row pt-4">
+						<div class="col-md col-sm">
+							<a th:href="@{${activationURL}}" class="btn btn-sm btn-secondary">Activate Account</a>
+						</div>
+					</div>
 
-<table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
-    <tr>
-        <td align="center" bgcolor="#78ab46" style="padding: 40px 0 30px 0;">
-            <img src="cid:logo.png" alt="http://memorynotfound.com" style="display: block;" />
-        </td>
-    </tr>
-    <tr>
-        <td bgcolor="#eaeaea" style="padding: 40px 30px 40px 30px;">
-            <p th:text="${'Dear ' + name}"></p>
-            <p>Sending Email using Spring Boot with <b>Thymeleaf template !!!</b></p>
-            <p>Thanks</p>
-        </td>
-    </tr>
-    <tr>
-        <td bgcolor="#777777" style="padding: 30px 30px 30px 30px;">
-            <p th:text="${signature}"></p>
-            <p th:text="${location}"></p>
-        </td>
-    </tr>
-</table>
+					<div class="row pt-5">
+						<div class="col-md col-sm">
+							<p th:text="${signature}"></p>
+							<p th:text="${location}"></p>
+						</div>
+					</div>
 
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
 </body>
 </html>
