--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS001-registration.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS001-registration.html
@@ -22,6 +22,16 @@
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.css" />
 
 <title>Laws Consulting</title>
+<style type="text/css">
+.field-icon {
+	float: right;
+	margin-left: -25px;
+	margin-right: 5px;
+	margin-top: -25px;
+	position: relative;
+	z-index: 2;
+}
+</style>
 </head>
 <body>
 	<header>
@@ -63,7 +73,7 @@
 					<form class="p-4" th:action="@{/do-registration}" th:method="post"
 						th:object="${dto}">
 						<h5 class="pb-2">REGISTER</h5>
-						
+
 						<div th:if="${messages}">
 							<div
 								class="alert alert-success alert-dismissible fade show rounded-0">
@@ -84,7 +94,7 @@
 								</button>
 							</div>
 						</div>
-						
+
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
@@ -129,10 +139,10 @@
 										type="password" th:field="*{password}" id="txtPassword"
 										class="form-control form-control-sm"
 										th:classappend="${#fields.hasErrors('password')} ? border-danger"
-										autocomplete="off"> <small class="text-danger"
-										th:if="${#fields.hasErrors('password')}"
+										autocomplete="off"><span toggle="#txtPassword"
+										class="fa fa-fw fa-eye field-icon toggle-password"></span> <small
+										class="text-danger" th:if="${#fields.hasErrors('password')}"
 										th:errors="*{password}"></small>
-
 								</div>
 							</div>
 							<div class="col-md-12">
@@ -142,7 +152,10 @@
 										type="password" th:field="*{confirmPassword}"
 										id="txtConfirmPassword" class="form-control form-control-sm"
 										th:classappend="${#fields.hasErrors('confirmPassword')} ? border-danger"
-										autocomplete="off"> <small class="text-danger"
+										autocomplete="off"><span toggle="#txtConfirmPassword"
+										class="fa fa-fw fa-eye field-icon toggle-password"></span> <small
+										class="text-danger" th:if="${#fields.hasErrors('password')}"
+										th:errors="*{password}"></small> <small class="text-danger"
 										th:if="${#fields.hasErrors('confirmPassword')}"
 										th:errors="*{confirmPassword}"></small>
 								</div>
@@ -160,6 +173,7 @@
 		</div>
 	</div>
 
+
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -173,5 +187,19 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
+
+	<script type="text/javascript">
+		debugger
+		$(".toggle-password").click(function() {
+
+			$(this).toggleClass("fa-eye fa-eye-slash");
+			var input = $($(this).attr("toggle"));
+			if (input.attr("type") == "password") {
+				input.attr("type", "text");
+			} else {
+				input.attr("type", "password");
+			}
+		});
+	</script>
 </body>
 </html>
