--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS002-initial-pwd-change.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS002-initial-pwd-change.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -18,62 +21,22 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.css" />
 
-<title>Laws Consulting</title>
+<title>Password Change</title>
+<style type="text/css">
+.field-icon {
+	float: right;
+	margin-left: -25px;
+	margin-right: 5px;
+	margin-top: -25px;
+	position: relative;
+	z-index: 2;
+}
+</style>
 </head>
 <body>
-	<!-- Modal -->
-	<div class="modal fade" id="exampleModalCenter" tabindex="-1"
-		role="dialog" aria-labelledby="exampleModalCenterTitle"
-		aria-hidden="true">
-		<div class="modal-dialog modal-dialog-centered" role="document">
-			<div class="modal-content">
-				<div class="modal-body">
-					<div class="row justify-content-center">
-
-						<div class="col-md-10 ">
-							<form class="p-4" action="#">
-								<h5 class="pb-2">LOGIN</h5>
-								<div class="row">
-									<div class="col-md-12">
-										<div class="form-group">
-											<i class="fas fa-envelope"></i> <label class="mb-0"
-												for="txtEmail">Email</label><input type="text" id="txtEmail"
-												name="email" class="form-control form-control-sm"
-												autofocus="autofocus" autocomplete="off"> <small
-												id="emailHelp" class="form-text text-muted text-right">We'll
-												never share your email with anyone else.</small>
-										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-md-12">
-										<div class="form-group">
-											<i class="fas fa-unlock-alt"></i> <label class="mb-0"
-												for="txtPassword">Password</label><input type="password"
-												id="txtPassword" name="password"
-												class="form-control form-control-sm" autocomplete="off">
-											<a href="setting/AS001-forgot-pwd-request.html"
-												class="text-decoration-none"><small
-												class="form-text text-right ">Forgot Password</small></a>
-										</div>
-									</div>
-								</div>
-								<div class="row justify-content-center pt-3">
-									<a class="btn btn-sm btn-secondary mr-2 col-md-4"
-										href="member/M005-question-create-1.html"><i
-										class="fas fa-sign-in-alt"></i> Login </a>
-
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 	<header>
 		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-info">
-			<a class="navbar-brand" href="S001-home.html">Laws Consulting</a>
+			<a class="navbar-brand" href="S001-home.html">Spring Security</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#navbarsExampleDefault"
 				aria-controls="navbarsExampleDefault" aria-expanded="false"
@@ -83,27 +46,17 @@
 
 			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item"><a class="nav-link" href="S001-home.html"><i
-							class="fa fa-home mr-1"></i>Home </a></li>
 					<li class="nav-item"><a class="nav-link"
-						href="S007-sample-qa.html"><i
-							class="far fa-question-circle mr-1"></i>Sample Q/A </a></li>
-					<li class="nav-item"><a class="nav-link" href="#"
-						data-toggle="modal" data-target="#exampleModalCenter"><i
-							class="fas fa-plus pl-2"></i> INQUIRY </a></li>
-					<li class="nav-item"><a class="nav-link"
-						href="S002-about-us.html"><i class="fas fa-users mr-1"></i>About
-							Us</a></li>
+						href="../S001-home.html"><i class="fa fa-home mr-1"></i>Home </a></li>
 				</ul>
 
 				<div class="my-2 my-lg-0">
 					<ul class="navbar-nav mr-auto">
-						<li class="nav-item"><a class="nav-link"
-							href="member/M001-registeration.html"><i
+						<li class="nav-item active"><a class="nav-link"
+							th:href="@{/do-registration}"><i
 								class="fa fa-registered mr-1"></i>Register </a></li>
-						<li class="nav-item"><a class="nav-link"
-							href="S003-login.html"><i class="fa fa-sign-in-alt mr-1"></i>Login
-						</a></li>
+						<li class="nav-item"><a class="nav-link" th:href="@{/login}"><i
+								class="fa fa-sign-in-alt mr-1"></i>Login </a></li>
 					</ul>
 				</div>
 
@@ -111,60 +64,77 @@
 		</nav>
 	</header>
 
+
 	<div class="container-fluid">
 		<div class="jumbotron-fluid"
 			style="min-height: 100vh; padding-top: 4rem; margin-bottom: 0px;">
 			<div class="row justify-content-center">
 				<div class="col-md-6 ">
-					<form class="p-4">
-						<h5 class="pb-2">CREATE</h5>
+					<form class="p-4" th:action="@{/init-password-change}"
+						th:method="post" th:object="${dto}">
+						<h5 class="pb-2">Initial Password Change</h5>
+
+						<div th:if="${messages}">
+							<div class="alert alert-success alert-dismissible fade show">
+								<small th:text="#{${messages}}"></small>
+								<button type="button" class="close" data-dismiss="alert"
+									aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+						</div>
+						<div th:if="${errors}">
+							<div class="alert alert-danger alert-dismissible fade show">
+								<small th:text="#{${errors}}"></small>
+								<button type="button" class="close" data-dismiss="alert"
+									aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+						</div>
+
 						<div class="row">
 							<div class="col-md-12">
 								<div class="form-group">
-									<i class="fas fa-envelope"></i> <label class="mb-0"
-										for="txtEmail">Email </label><input type="text" id="txtEmail"
-										value="abcde@gmail.com" class="form-control form-control-sm"
-										autocomplete="off" disabled="disabled">
+									<i class="fas fa-unlock-alt"></i> <label class="mb-0"
+										for="txtNewPassword" th:text="#{lblNewPassword}"></label><input
+										type="password" th:field="*{newPassword}" id="txtNewPassword"
+										class="form-control form-control-sm"
+										th:classappend="${#fields.hasErrors('newPassword')} ? border-danger"
+										autocomplete="off"><span toggle="#txtNewPassword"
+										class="fa fa-fw fa-eye field-icon toggle-password"></span> <small
+										class="text-danger"
+										th:if="${#fields.hasErrors('newPassword')}"
+										th:errors="*{newPassword}"></small>
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
 									<i class="fas fa-unlock-alt"></i> <label class="mb-0"
-										for="txtOldPassword">Old Password</label><input
-										type="password" id="txtOldPassword" name="password"
-										class="form-control form-control-sm" autocomplete="off">
-
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<i class="fas fa-unlock-alt"></i> <label class="mb-0"
-										for="txtPassword">Password</label><input type="password"
-										id="txtPassword" name="password"
-										class="form-control form-control-sm" autocomplete="off">
-
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<i class="fas fa-unlock-alt"></i> <label class="mb-0"
-										for="txtConfirmPassword">Confirm Password</label><input
-										type="password" id="txtConfirmPassword" name="confirmPassword"
-										class="form-control form-control-sm" autocomplete="off">
+										for="txtConfirmNewPassword" th:text="#{lblConfirmNewPassword}"></label><input
+										type="password" th:field="*{confirmNewPassword}"
+										id="txtConfirmNewPassword"
+										class="form-control form-control-sm"
+										th:classappend="${#fields.hasErrors('confirmNewPassword')} ? border-danger"
+										autocomplete="off"><span
+										toggle="#txtConfirmNewPassword"
+										class="fa fa-fw fa-eye field-icon toggle-password"></span> <small
+										class="text-danger"
+										th:if="${#fields.hasErrors('confirmNewPassword')}"
+										th:errors="*{confirmNewPassword}"></small>
 								</div>
 							</div>
 						</div>
 						<div class="row justify-content-center pt-3">
-							<a class="btn btn-sm btn-secondary mr-2 col-md-2"
-								href="S001-home.html">Cancel</a> <a
-								class="btn btn-sm btn-secondary mr-2 col-md-2"
-								href="lawyer/L001-question-list.html">Save</a>
+							<button type="submit"
+								class="btn btn-sm btn-secondary mr-2 col-md-2">Save</button>
 						</div>
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
+
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -179,5 +149,19 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
+
+	<script type="text/javascript">
+		debugger
+		$(".toggle-password").click(function() {
+
+			$(this).toggleClass("fa-eye fa-eye-slash");
+			var input = $($(this).attr("toggle"));
+			if (input.attr("type") == "password") {
+				input.attr("type", "text");
+			} else {
+				input.attr("type", "password");
+			}
+		});
+	</script>
 </body>
 </html>
