commit : successful finished the forgot password request and reset.

--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/email/email-registration.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/email/email-registration.html
@@ -30,19 +30,21 @@
 				<div class="card-body ">
 					<div class="row ">
 						<div class="col-md col-sm">
-							<h6 class="card-title " th:text="${'Dear ' + name}"></h6>
+							<h5 class="card-title " th:text="${'Dear ' + name}"></h5>
 							<p>Thank you for you registration.</p>
 						</div>
 					</div>
 					<div class="row ">
 						<div class="col-md col-sm">
-							<p>Please click the following button to activate you account.
-								Account activation is within 24 hours after registration.</p>
+							<p>Please click the following button to activate your
+								account. Account activation is within 24 hours after
+								registration.</p>
 						</div>
 					</div>
 					<div class="row pt-4">
 						<div class="col-md col-sm">
-							<a th:href="@{${activationURL}}" class="btn btn-sm btn-secondary">Activate Account</a>
+							<a th:href="@{${activationURL}}" class="btn btn-sm btn-secondary">Activate
+								Your Account</a>
 						</div>
 					</div>
 
