--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS001-registration.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS001-registration.html
@@ -21,7 +21,7 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.css" />
 
-<title>Laws Consulting</title>
+<title>Spring Security</title>
 <style type="text/css">
 .field-icon {
 	float: right;
