--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/login.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/login.html
@@ -104,7 +104,7 @@
 										class="form-control form-control-sm" autocomplete="off">
 									<span toggle="#txtPassword"
 										class="fa fa-fw fa-eye field-icon toggle-password"></span> <a
-										href="#" class="text-decoration-none"><small
+										th:href="@{/forgot-pwd-request}" class="text-decoration-none"><small
 										class="form-text text-right ">Forgot Password</small></a>
 								</div>
 							</div>
