--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS002-forgot-pwd-request.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS002-forgot-pwd-request.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -18,62 +21,11 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.css" />
 
-<title>Laws Consulting</title>
 </head>
 <body>
-	<!-- Modal -->
-	<div class="modal fade" id="exampleModalCenter" tabindex="-1"
-		role="dialog" aria-labelledby="exampleModalCenterTitle"
-		aria-hidden="true">
-		<div class="modal-dialog modal-dialog-centered" role="document">
-			<div class="modal-content">
-				<div class="modal-body">
-					<div class="row justify-content-center">
-
-						<div class="col-md-10 ">
-							<form class="p-4" action="#">
-								<h5 class="pb-2">LOGIN</h5>
-								<div class="row">
-									<div class="col-md-12">
-										<div class="form-group">
-											<i class="fas fa-envelope"></i> <label class="mb-0"
-												for="txtEmail">Email</label><input type="text" id="txtEmail"
-												name="email" class="form-control form-control-sm"
-												autofocus="autofocus" autocomplete="off"> <small
-												id="emailHelp" class="form-text text-muted text-right">We'll
-												never share your email with anyone else.</small>
-										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-md-12">
-										<div class="form-group">
-											<i class="fas fa-unlock-alt"></i> <label class="mb-0"
-												for="txtPassword">Password</label><input type="password"
-												id="txtPassword" name="password"
-												class="form-control form-control-sm" autocomplete="off">
-											<a href="setting/AS001-forgot-pwd-request.html"
-												class="text-decoration-none"><small
-												class="form-text text-right ">Forgot Password</small></a>
-										</div>
-									</div>
-								</div>
-								<div class="row justify-content-center pt-3">
-									<a class="btn btn-sm btn-secondary mr-2 col-md-4"
-										href="../member/M005-question-create-1.html"><i
-										class="fas fa-sign-in-alt"></i> Login </a>
-
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 	<header>
 		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-info">
-			<a class="navbar-brand" href="S001-home.html">Laws Consulting</a>
+			<a class="navbar-brand" href="S001-home.html">Spring Security</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#navbarsExampleDefault"
 				aria-controls="navbarsExampleDefault" aria-expanded="false"
@@ -85,25 +37,15 @@
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item"><a class="nav-link"
 						href="../S001-home.html"><i class="fa fa-home mr-1"></i>Home </a></li>
-					<li class="nav-item"><a class="nav-link"
-						href="../S007-sample-qa.html"><i
-							class="far fa-question-circle mr-1"></i>Sample Q/A </a></li>
-					<li class="nav-item"><a class="nav-link" href="#"
-						data-toggle="modal" data-target="#exampleModalCenter"><i
-							class="fas fa-plus pl-2"></i> INQUIRY </a></li>
-					<li class="nav-item"><a class="nav-link"
-						href="../S002-about-us.html"><i class="fas fa-users mr-1"></i>About
-							Us</a></li>
 				</ul>
 
 				<div class="my-2 my-lg-0">
 					<ul class="navbar-nav mr-auto">
-						<li class="nav-item"><a class="nav-link"
-							href="../member/M001-registeration.html"><i
+						<li class="nav-item active"><a class="nav-link"
+							th:href="@{/do-registration}"><i
 								class="fa fa-registered mr-1"></i>Register </a></li>
-						<li class="nav-item"><a class="nav-link"
-							href="../S003-login.html"><i class="fa fa-sign-in-alt mr-1"></i>Login
-						</a></li>
+						<li class="nav-item"><a class="nav-link" th:href="@{/login}"><i
+								class="fa fa-sign-in-alt mr-1"></i>Login </a></li>
 					</ul>
 				</div>
 
@@ -111,28 +53,41 @@
 		</nav>
 	</header>
 
+
 	<div class="container-fluid">
 		<div class="jumbotron-fluid"
 			style="min-height: 100vh; padding-top: 4rem; margin-bottom: 0px;">
 			<div class="row justify-content-center">
 				<div class="col-md-6 ">
-					<form class="p-4">
+					<form class="p-4" th:action="@{/forgot-pwd-request}"
+						th:method="post" th:object="${dto}">
 						<h5 class="pb-2">FORGOT PASSWORD</h5>
+
+						<div th:if="${messages}">
+							<div class="alert alert-success alert-dismissible fade show">
+								<small th:text="#{${messages}}"></small>
+								<button type="button" class="close" data-dismiss="alert"
+									aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+						</div>
+
 						<div class="row">
 							<div class="col-md-12">
 								<div class="form-group">
 									<i class="fas fa-envelope"></i> <label class="mb-0"
 										for="txtEmail">Email </label><input type="text" id="txtEmail"
-										value="abcde@gmail.com" class="form-control form-control-sm"
-										autocomplete="off">
+										th:field="*{email}" class="form-control form-control-sm"
+										autocomplete="off" required="required">
 								</div>
 							</div>
 						</div>
 						<div class="row justify-content-center pt-3">
 							<a class="btn btn-sm btn-secondary mr-2 col-md-2"
-								href="S003-login.html">Cancel</a> <a
-								class="btn btn-sm btn-secondary mr-2 col-md-2"
-								href="AS001-forgot-pwd-reset.html">Send</a>
+								href="@{/login}">Cancel</a>
+							<button type="submit"
+								class="btn btn-sm btn-secondary mr-2 col-md-2">Send</button>
 						</div>
 					</form>
 				</div>
